// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contingent in consequent 1`] = `
"() => create(\\"div\\", {
  className: !!true && \\"element_3ld\\"
}, create(\\"div\\", {
  className: \\"inner_79m\\"
}, \\"Hello\\"));

css(\`
	/* 5 */
	.element_3ld .inner_79m.foo-bar { background: blue }
\`);"
`;

exports[`contingent in consequent 2`] = `
"() => <div className={!!true && \\"element_3ld\\"}><div className=\\"inner_79m\\">Hello</div></div>;

css(\`
	/* 5 */
	.element_3ld .inner_79m.foo-bar { background: blue }
\`);"
`;

exports[`contingent on consequent 1`] = `
"() => create(\\"div\\", {
  className: !!true && \\"element_3ld\\"
}, create(\\"div\\", {
  className: \\"div_1cq\\"
}, \\"Hello\\"));

css(\`
	/* 5 */
	.element_3ld .div_1cq.foo-bar { background: blue }
\`);"
`;

exports[`contingent on consequent 2`] = `
"() => <div className={!!true && \\"element_3ld\\"}><div className=\\"div_1cq\\">Hello</div></div>;

css(\`
	/* 5 */
	.element_3ld .div_1cq.foo-bar { background: blue }
\`);"
`;

exports[`multiple contingent on consequent 1`] = `
"() => create(\\"div\\", {
  className: !!active && \\"element_3ld\\"
}, create(\\"div\\", {}, \\"Hello\\"));

css(\`
	/* 5 */
	.element_3ld.foo { color: red }
	.element_3ld.bar { color: red }
\`);"
`;

exports[`multiple contingent on consequent 2`] = `
"() => <div className={!!active && \\"element_3ld\\"}><div>Hello</div></div>;

css(\`
	/* 5 */
	.element_3ld.foo { color: red }
	.element_3ld.bar { color: red }
\`);"
`;
